--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
   <head>
   <title>EMUHLY</title>
-		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="/bootstrap.css" rel="stylesheet">
   </head>
 </HTML>
