--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<link href="/bootstrap.css" rel="stylesheet">
   </head>
 <body>
-	hehe
+	<body background="/embackground.png">
 	</body>
 </HTML>
