--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>EMUHLY</title>
 		<link href="/bootstrap.css" rel="stylesheet">
   </head>
-	<body background="/embackground.png">
+	<body background="/embackground.png" width="200" height="121">
 	</body>
 </HTML>
