--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <HTML>
   <head>
   <title>EMUHLY</title>
-		<link href="/bootstrap.css" rel="stylesheet">
   </head>
-	<body background="/embackground.png" width="200" height="121">
+	<body background="/embackground.png">
 	</body>
 </HTML>
