--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
-<HTML>
-  <head>
-  <title>EMUHLY</title>
-  </head>
-	<body background="/embackground.png">
-	</body>
-</HTML>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>EMUHLY</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("embackground.png");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+</head>
+<body>
+
+<div class="bg"></div>
+
+</body>
+</html>
+
