--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("embackground.png");
+  background-image: url("background.png");
 
   /* Full height */
   height: 100%; 
