--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>EMUHLY</title>
+<title>EMUHLY</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {
   height: 100%;
   margin: 0;
 }
-
 .bg {
   /* The image used */
   background-image: url("/embg.png");
@@ -23,10 +22,13 @@ body, html {
 }
 </style>
 </head>
+	
 <body>
 
 <div class="bg"></div>
-
+<a href="https://emuhly.com/fashion" class="button1 bouncy">Fashion</a>
+<a href="https://emuhly.com/lifestyle" class="button1 bouncy">Lifestyle</a>
 </body>
+	
 </html>
 
