--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@ body, html {
 	
 <body>
 	
+<div class="bg">
 <a href="https://emuhly.com/fashion" class="button1 bouncy">Fashion</a>
 <a href="https://emuhly.com/lifestyle" class="button1 bouncy">Lifestyle</a>
-<div class="bg"></div>
+	
+	
+	
+	</div>
 </body>
 	
 </html>
