--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+a.button1 {
+ display:inline-block;
+ padding:0.35em 1.2em;
+ border:0.1em solid #FFFFFF;
+ margin:0 0.3em 0.3em 0;
+ border-radius:0.12em;
+ box-sizing: border-box;
+ text-decoration:none;
+ font-family:'Roboto',sans-serif;
+ font-weight:300;
+ color:#FFFFFF;
+ text-align:center;
+ transition: all 0.2s;
+}
+a.button1:hover {
+ color:#000000;
+ background-color:#FFFFFF;
+}
+@media all and (max-width:30em) {
+ a.button1{
+  display:block;
+  margin:0.4em auto;
+ }
+}
+
+.bouncy {
+ animation:bouncy 5s infinite linear;
+ position:relative;
+}
+@keyframes bouncy {
+ 0%{top:0em}
+ 40%{top:0em}
+ 43%{top:-0.9em}
+ 46%{top:0em}
+ 48%{top:-0.4em}
+ 50%{top:0em}
+ 100%{top:0em;}
+}
+
 body, html {
   height: 100%;
   margin: 0;
@@ -29,10 +68,7 @@ body, html {
 <div class="bg">
 <a href="https://emuhly.com/fashion" class="button1 bouncy">Fashion</a>
 <a href="https://emuhly.com/lifestyle" class="button1 bouncy">Lifestyle</a>
-	
-	
-	
-	</div>
+</div>
 </body>
 	
 </html>
