--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ body, html {
 <body>
 	
 <div class="bg">
-<a href="https://emuhly.com/fashion" class="button1 bouncy">Fashion</a>
-<a href="https://emuhly.com/lifestyle" class="button1 bouncy">Lifestyle</a>
+<a class="button1 bouncy">Fashion</a>
+<a class="button1 bouncy">Lifestyle</a>
 </div>
 </body>
 	
