--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>EMUHLY</title>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 //=== Drawing effect
@@ -75,13 +75,6 @@
 }
 
 //=== Pen styling, ignore
-body { 
-  background: #1f1a25;
-  display: flex; 
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-}
 
 body, html {
   height: 100%;
