--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
-body, html {
+body {
   height: 100%;
   margin: 0;
 }
