--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" type="text/css" href="/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+	
+button { 
+	height: 50px;
+	}
 
 body, html {
   height: 100%;
