--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="description" content="Lifestyle & Fashion">
+<meta name="author" content="Emily Lakic">
 <title>EMUHLY</title>
-<link rel="stylesheet" type="text/css" href="/style.css" />
+<link href="/style.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 	
