--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ body, html {
 <body>
 	
 <div class="bg">
+<div class="container">
+  <button class="button bounce">
+    Lifestyle
+  </button>
+</div>
 		
 </div>
 </body>
