--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<a href="#" class="primary-btn header-btn text-uppercase">View Details</a>
 						</div>
 						<div class="banner-img col-lg-6 col-md-6">
-							<img class="img-fluid" src="img/banner-img.png" alt="">
+							<img class="img-fluid" src="../emuhlylogo.png" alt="">
 						</div>												
 					</div>
 				</div>
