--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Robotics</title>
+		<title>emuhly</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
@@ -73,10 +73,7 @@
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-center">
 						<div class="banner-content col-lg-6 col-md-6">
-							<h1>
-								Improved <br>
-								Production level <br>
-								with Robotics			
+							<h1>			
 							</h1>
 							<p class="text-white text-uppercase">
 								Everyone wants the innovation through robotics
