--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<p class="text-white text-uppercase">
 								
 							</p>
-							<a href="#" class="primary-btn header-btn text-uppercase">View Details</a>
+							<a href="#" class="primary-btn header-btn text-uppercase">Get Started</a>
 						</div>
 						<div class="banner-img col-lg-6 col-md-6">
 							<img class="img-fluid" src="../emuhlylogo.png" alt="">
