--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			    <div class="container main-menu">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index.html"><img src="../emlogo.png" alt="" title="" /></a>
+				        <a href="index.html"><img src="../newlogo.png" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
