--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 			
 
 			<!-- Start blog Area -->
-			<section class="blog-area section-gap">
+			<!--<section class="blog-area section-gap">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="col-md-12 pb-40 header-text text-center">
@@ -369,7 +369,7 @@
 						</div>
 					</div>
 				</div>	
-			</section>
+			</section>-->
 			<!-- End blog Area -->
 			
 			<!-- start footer Area -->		
@@ -378,13 +378,13 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-12">
 							<div class="single-footer-widget">
-								<h6>Top Products</h6>
-								<ul class="footer-nav">
+								<h6>Emily Lakic</h6>
+								<!--<ul class="footer-nav">
 									<li><a href="#">Managed Website</a></li>
 									<li><a href="#">Manage Reputation</a></li>
 									<li><a href="#">Power Tools</a></li>
 									<li><a href="#">Marketing Service</a></li>
-								</ul>
+								</ul>-->
 							</div>
 						</div>
 						<div class="col-lg-6  col-md-12">
