--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<a href="#" class="primary-btn header-btn text-uppercase">Get Started</a>
 						</div>
 						<div class="banner-img col-lg-4 col-md-4">
-							<img class="img-fluid" src="../emuhlylogo.png" alt="">
+							<img class="img-fluid" src="../emzlogo.png" alt="">
 						</div>												
 					</div>
 				</div>
