--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About Us</a></li>
-				          <li><a href="services.html">Services</a></li>
-				          <li><a href="products.html">Products</a></li>
+				          <li><a href="about.html">About</a></li>
+				          <li><a href="products.html">Style</a></li>
 				          <li class="menu-has-children"><a href="">Blog</a>
 				            <ul>
-				              <li><a href="blog-home.html">Blog Home</a></li>
-				              <li><a href="blog-single.html">Blog Single</a></li>
+				              <li><a href="blog-home.html">Fashion</a></li>
+				              <li><a href="blog-single.html">Lifestyle</a></li>
 				            </ul>
 				          </li>						          
 				          <li><a href="contact.html">Contact</a></li>
-				          <li class="menu-has-children"><a href="">Dropdown</a>
+				          <!--<li class="menu-has-children"><a href="">Dropdown</a>
 				            <ul>
 				              <li><a href="elements.html">Elements</a></li>	
 				              <li><a href="product-details.html">Product Details</a></li>
@@ -62,7 +61,7 @@
 					          </li>	
 				            </ul>
 				          </li>				              
-				        </ul>
+				        </ul>-->
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
 			    </div>
