--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="col-md-12 pb-40 header-text text-center">
-							<h1 class="pb-10">Style Inspo/h1>
-							<p>
-								Who are in extremely love with eco friendly system.
-							</p>
+							<h1 class="pb-10">Style Inspo</h1>
 						</div>
 					</div>							
 					<div class="row">
