--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="col-md-12 pb-40 header-text text-center">
+							<a href="index.html"><img src="../ems.png" alt="" title="" /></a>
 							<h1 class="pb-10">Style Inspo</h1>
 						</div>
 					</div>							
