--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 			<link rel="stylesheet" href="css/animate.min.css">
 			<link rel="stylesheet" href="css/owl.carousel.css">
 			<link rel="stylesheet" href="css/main.css">
+		
+		<style>
+			.resize {
+			width: 100%;
+  			height: auto
+			}
+		</style>
 		</head>
 		<body>	
 			  <header id="header" id="home">
@@ -92,7 +99,7 @@
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="col-md-12 pb-40 header-text text-center">
-							<a href="index.html"><img src="../ems.png" alt="" title="" /></a>
+							<a href="index.html"><img class="resize" src="../ems.png" alt="" title="" /></a>
 							<h1 class="pb-10">Style Inspo</h1>
 						</div>
 					</div>							
