--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bootslander Bootstrap Template - Index</title>
+  <title>Emuhly</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -88,8 +88,8 @@
       <div class="row justify-content-between">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>Build Your Landing Page With <span>Bootstlander</span></h1>
-            <h2>We are team of talanted designers making websites with Bootstrap</h2>
+            <h1>Emily Lakic <span>Software Engineer</span></h1>
+            <h2><i class="fa fa-space-shuttle" aria-hidden="true"></i>Aerospace & Defense Industry</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Get Started</a>
             </div>
