--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h1>Emily Lakic <span>Software Engineer</span></h1>
             <h2><i class="fa fa-space-shuttle" aria-hidden="true"></i>Aerospace & Defense Industry</h2>
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto">Get Started</a>
+              <a href="#about" class="btn-get-started scrollto">Learn More</a>
             </div>
           </div>
         </div>
