--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
   <!-- =======================================================
   * Template Name: Bootslander - v3.0.0
@@ -88,7 +89,7 @@
       <div class="row justify-content-between">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>Emily Lakic <span>Software Engineer</span></h1>
+            <h1>Emily Lakic&nbsp;&nbsp;&nbsp;&nbsp; <span>Software Engineer</span></h1>
             <h2><i class="fa fa-space-shuttle" aria-hidden="true"></i>Aerospace & Defense Industry</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
