--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <script src="https://use.fontawesome.com/b65a4f5843.js"></script>
 
   <!-- =======================================================
   * Template Name: Bootslander - v3.0.0
