--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       <div class="row justify-content-between">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>Emily Lakic</h1>
-            <h1><span>Software Engineer</span></h1>
+            <h1><span>Emily Lakic</span></h1>
+            <h1>Software Engineer</h1>
             <i class="fa fa-rocket" aria-hidden="true"></i><h2>Aerospace & Defense Industry</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
