--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div data-aos="zoom-out">
             <h1><span>Emily Lakic</span></h1>
             <h1>Software Engineer</h1>
-            <i class="fa fa-rocket" aria-hidden="true"></i><h2>Aerospace & Defense Industry</h2>
+            <h2><i class="fa fa-rocket" aria-hidden="true"></i>Aerospace & Defense Industry</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
             </div>
