--- a/index.html
+++ b/index.html
@@ -165,10 +165,24 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Features</h2>
-          <p>Check The Features</p>
+          <p>Skills & Expertise</p>
         </div>
 
         <div class="row" data-aos="fade-left">
+        <table>
+        <tr>
+        <th>Month</th>
+        <th>Savings</th>
+        </tr>
+          <tr>
+        <td>January</td>
+        <td>$100</td>
+        </tr>
+        <tr>
+        <td>February</td>
+        <td>$80</td>
+     </tr>
+        </table>
           <div class="col-lg-3 col-md-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
               <i class="ri-store-line" style="color: #ffbb2c;"></i>
