--- a/index.html
+++ b/index.html
@@ -171,18 +171,12 @@
         <div class="row" data-aos="fade-left">
         <table>
         <tr>
-        <th>Month</th>
-        <th>Savings</th>
+        <th>Skills & Expertise</th>
+        <th>Education</th>
         </tr>
-          <tr>
-        <td>January</td>
-        <td>$100</td>
-        </tr>
+
         <tr>
-        <td>February</td>
-        <td>$80</td>
-     </tr>
-        </table>
+        <td>
           <div class="col-lg-3 col-md-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
               <i class="ri-store-line" style="color: #ffbb2c;"></i>
@@ -195,6 +189,15 @@
               <h3><a href="">Dolor Sitema</a></h3>
             </div>
           </div>
+        </td>
+        <td>$100</td>
+        </tr>
+
+        <tr>
+        <td>February</td>
+        <td>$80</td>
+        </tr>
+        </table>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
               <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
