--- a/index.html
+++ b/index.html
@@ -163,15 +163,18 @@
     <section id="features" class="features">
       <div class="container">
 
-        <div class="section-title" data-aos="fade-up">
+        <!-- <div class="section-title" data-aos="fade-up">
           <h2>Features</h2>
           <p>Skills & Expertise</p>
-        </div>
+        </div> -->
 
         <div class="row" data-aos="fade-left">
         <table>
         <tr>
-        <th>Skills & Expertise</th>
+        <th><div class="section-title" data-aos="fade-up">
+          <!--<h2>Features</h2>-->
+          <p>Skills & Expertise</p>
+        </div></th>
         <th>Education</th>
         </tr>
 
