--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
           <!--<h2>Features</h2>-->
           <p>Skills & Expertise</p>
         </div></th>
-        <th>Education</th>
+        <th><div class="section-title" data-aos="fade-up">
+          <!--<h2>Features</h2>-->
+          <p style="font:12px">Education</p>
+        </div></th>
         </tr>
 
         <tr>
