--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div data-aos="zoom-out">
             <h1><span>Emily Lakic</span></h1>
             <h1>Software Engineer</h1>
-            <h2><i class="fa fa-fighter-jet" aria-hidden="true"></i>Aerospace & Defense Industry</h2>
+            <h2><i class="fa fa-fighter-jet" aria-hidden="true"></i> Aerospace & Defense Industry</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
             </div>
@@ -163,26 +163,12 @@
     <section id="features" class="features">
       <div class="container">
 
-        <!-- <div class="section-title" data-aos="fade-up">
+        <div class="section-title" data-aos="fade-up">
           <h2>Features</h2>
           <p>Skills & Expertise</p>
-        </div> -->
+        </div>
 
         <div class="row" data-aos="fade-left">
-        <table>
-        <tr>
-        <th><div class="section-title" data-aos="fade-up">
-          <!--<h2>Features</h2>-->
-          <p>Skills & Expertise</p>
-        </div></th>
-        <th><div class="section-title" data-aos="fade-up">
-          <!--<h2>Features</h2>-->
-          <p style="font:12px">Education</p>
-        </div></th>
-        </tr>
-
-        <tr>
-        <td>
           <div class="col-lg-3 col-md-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
               <i class="ri-store-line" style="color: #ffbb2c;"></i>
@@ -195,8 +181,6 @@
               <h3><a href="">Dolor Sitema</a></h3>
             </div>
           </div>
-        </td>
-        <td>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
               <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
@@ -209,11 +193,6 @@
               <h3><a href="">Magni Dolores</a></h3>
             </div>
           </div>
-        </td>
-        </tr>
-
-        <tr>
-        <td>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
               <i class="ri-database-2-line" style="color: #47aeff;"></i>
@@ -226,8 +205,6 @@
               <h3><a href="">Eiusmod Tempor</a></h3>
             </div>
           </div>
-        </td>
-        <td>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="350">
               <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
@@ -240,9 +217,6 @@
               <h3><a href="">Pira Neve</a></h3>
             </div>
           </div>
-        </td>
-        </tr>
-        </table>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
               <i class="ri-anchor-line" style="color: #b2904f;"></i>
