--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
+  <!--  <section id="counts" class="counts">
       <div class="container">
 
         <div class="row" data-aos="fade-up">
@@ -290,7 +290,7 @@
     </section><!-- End Counts Section -->
 
     <!-- ======= Details Section ======= -->
-    <section id="details" class="details">
+  <!--  <section id="details" class="details">
       <div class="container">
 
         <div class="row content">
@@ -384,7 +384,7 @@
     </section><!-- End Details Section -->
 
     <!-- ======= Gallery Section ======= -->
-    <section id="gallery" class="gallery">
+  <!--  <section id="gallery" class="gallery">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -464,7 +464,7 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+  <!--  <section id="testimonials" class="testimonials">
       <div class="container">
 
         <div class="owl-carousel testimonials-carousel" data-aos="zoom-in">
@@ -530,7 +530,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+  <!--  <section id="team" class="team">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
