--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           <div data-aos="zoom-out">
             <h1><span>Emily Lakic</span></h1>
             <h1>Software Engineer</h1>
-            <h2><i class="fa fa-fighter-jet" aria-hidden="true"></i>  Aerospace & Defense Industry</h2>
-            <h2><i class="fas fa-map-pin"></i>  New York</h2>
+            <h2><i class="fa fa-fighter-jet" aria-hidden="true"></i>&nbsp;&nbsp;Aerospace & Defense Industry</h2>
+            <h2><i class="fas fa-map-pin"></i>&nbsp;&nbsp;New York</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
             </div>
