--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div data-aos="zoom-out">
             <h1><span>Emily Lakic</span></h1>
             <h1>Software Engineer</h1>
-            <h2><i class="fa fa-fighter-jet" aria-hidden="true"></i>Aerospace & Defense Industry &nbsp;&nbsp; <i class="fa fa-map-marker" aria-hidden="true"></i>New York</h2>
+            <h2><i class="fa fa-fighter-jet" aria-hidden="true"></i> Aerospace & Defense Industry &nbsp; <i class="fa fa-map-marker" aria-hidden="true"></i> New York</h2>
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
             </div>
