--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/b65a4f5843.js"></script>
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
   <!-- =======================================================
   * Template Name: Bootslander - v3.0.0
@@ -171,7 +172,8 @@
         <div class="row" data-aos="fade-left">
           <div class="col-lg-3 col-md-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
-              <i class="ri-store-line" style="color: #ffbb2c;"></i>
+              <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
+              <span class="iconify" data-icon="vscode-icons:file-type-python" data-inline="false"></span>
               <h3><a href="">Python</a></h3>
             </div>
           </div>
