--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
               <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
-              <span class="iconify" data-icon="vscode-icons:file-type-python" data-inline="false"></span>
+              <span class="iconify" data-icon="logos:python" data-inline="false"></span>
               <h3><a href="">Python</a></h3>
             </div>
           </div>
