--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
-              <i class="ri-database-2-line" style="color: #47aeff;"></i>
+              <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
+              <span class="iconify" data-icon="logos:c-plusplus" data-inline="false"></span>
               <h3><a href="">C++</a></h3>
             </div>
           </div>
