--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
-              <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
+              <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
+              <span class="iconify" data-icon="logos:c" data-inline="false"></span>
               <h3><a href="">C</a></h3>
             </div>
           </div>
