--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-              <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+              <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
+              <span class="iconify" data-icon="logos:java" data-inline="false"></span>
               <h3><a href="">Java</a></h3>
             </div>
           </div>
