--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
-              <i class="ri-anchor-line" style="color: #b2904f;"></i>
+              <!--<i class="ri-anchor-line" style="color: #b2904f;"></i>-->
+              <span class="iconify" data-icon="logos:javascript" data-inline="false"></span>
               <h3><a href="">JavaScript</a></h3>
             </div>
           </div>
