--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
-              <i class="ri-disc-line" style="color: #b20969;"></i>
+              <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
+              <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
               <h3><a href="">HTML/CSS</a></h3>
             </div>
           </div>
