--- a/index.html
+++ b/index.html
@@ -174,78 +174,78 @@
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
               <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
               <span class="iconify" data-icon="logos:python" data-inline="false"></span>
-              <h3><a href="">Python</a></h3>
+              <h3>Python</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
               <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
               <span class="iconify" data-icon="logos:java" data-inline="false"></span>
-              <h3><a href="">Java</a></h3>
+              <h3>Java</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
               <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-              <h3><a href=""></a></h3>
+              <h3></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3><a href=""></a></h3>
+              <h3></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
               <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
               <span class="iconify" data-icon="logos:c-plusplus" data-inline="false"></span>
-              <h3><a href="">C++</a></h3>
+              <h3>C++</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
               <span class="iconify" data-icon="logos:c" data-inline="false"></span>
-              <h3><a href="">C</a></h3>
+              <h3>C</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="350">
               <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-              <h3><a href=""></a></h3>
+              <h3></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="400">
               <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-              <h3><a href=""></a></h3>
+              <h3></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
               <!--<i class="ri-anchor-line" style="color: #b2904f;"></i>-->
               <span class="iconify" data-icon="logos:javascript" data-inline="false"></span>
-              <h3><a href="">JavaScript</a></h3>
+              <h3>JavaScript</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
               <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
               <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
-              <h3><a href="">HTML/CSS</a></h3>
+              <h3>HTML/CSS</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="550">
               <i class="ri-base-station-line" style="color: #ff5828;"></i>
-              <h3><a href=""></a></h3>
+              <h3></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
               <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-              <h3><a href=""></a></h3>
+              <h3></h3>
             </div>
           </div>
         </div>
