--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Features</h2>
-          <p>Skills & Expertise</p>
+          <p>Skills & Expertise | Education</p>
         </div>
 
         <div class="row" data-aos="fade-left">
