--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
-              <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-              <h3></h3>
+              <!--<i class="ri-calendar-todo-line" style="color: #e80368;"></i>-->
+              <span class="iconify" data-icon="ion:school-sharp" data-inline="false" style="color: #005a43;"></span>
+              <h3>Binghamton University</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
