--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-              <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3></h3>
+              <!--<i class="ri-paint-brush-line" style="color: #e361ff;"></i>-->
+              <span class="iconify" data-icon="ant-design:file-filled" data-inline="false" style="color: #005a43;"></span>
+              <h3>BS in Computer Science</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
