--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <!--<i class="ri-paint-brush-line" style="color: #e361ff;"></i>-->
-              <span class="iconify" data-icon="ant-design:file-filled" data-inline="false" style="color: #005a43;"></span>
-              <h3>BS in Computer Science</h3>
+              <!-- <span class="iconify" data-icon="ant-design:file-filled" data-inline="false" style="color: #005a43;"></span>
+              <h3>BS in Computer Science</h3> -->
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
@@ -214,14 +214,15 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="350">
-              <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-              <h3></h3>
+              <!-- <i class="ri-file-list-3-line" style="color: #11dbcf;"></i> -->
+              <span class="iconify" data-icon="ant-design:file-filled" data-inline="false" style="color: #005a43;"></span>
+              <h3>BS in Computer Science</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="400">
-              <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-              <h3></h3>
+              <!-- <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
+              <h3></h3> -->
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
@@ -240,14 +241,14 @@
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="550">
-              <i class="ri-base-station-line" style="color: #ff5828;"></i>
-              <h3></h3>
+              <!-- <i class="ri-base-station-line" style="color: #ff5828;"></i>
+              <h3></h3> -->
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
-              <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-              <h3></h3>
+              <!-- <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+              <h3></h3> -->
             </div>
           </div>
         </div>
