--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h1>Software Engineer</h1>
             <h2><i class="fa fa-fighter-jet" aria-hidden="true"></i> Aerospace & Defense Industry &nbsp; <!--<i class="fa fa-map-marker" aria-hidden="true"></i> New York--></h2>
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto">Learn More</a>
+              <a href="#about" class="btn-get-started scrollto">More Info</a>
             </div>
           </div>
         </div>
