--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Lockheed Martin/a></h4>
+              <h4 class="title"><a href="">Lockheed Martin</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
 
