--- a/index.html
+++ b/index.html
@@ -171,8 +171,22 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <!--<h2>Eum ipsam laborum deleniti velitena</h2>
+            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>-->
+            <div class="col-lg-3 col-md-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
+                <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
+                <span class="iconify" data-icon="logos:python" data-inline="false"></span>
+                <h3>&nbsp;&nbsp;Python</h3>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
+                <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
+                <span class="iconify" data-icon="logos:java" data-inline="false"></span>
+                <h3>Java</h3>
+              </div>
+            </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
             <p>
