--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
             <!--<h2>Eum ipsam laborum deleniti velitena</h2>
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>-->
+            <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
@@ -187,6 +188,7 @@
                 <h3>Java</h3>
               </div>
             </div>
+          </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
                 <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
