--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
               </div>
             </div>
           </div>
+          <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
                 <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
@@ -203,6 +204,7 @@
                 <h3>C</h3>
               </div>
             </div>
+          </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
                 <!--<i class="ri-anchor-line" style="color: #b2904f;"></i>-->
