--- a/index.html
+++ b/index.html
@@ -165,12 +165,16 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Features</h2>
-          <p>Skills & Expertise</p>
+          <h2>-</h2>
+          <p>-</p>
         </div>
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
+            <div class="section-title" data-aos="fade-up">
+              <h2>Features</h2>
+              <p>Skills & Expertise</p>
+            </div>
             <!--<h2>Eum ipsam laborum deleniti velitena</h2>
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>-->
             <div class="row" data-aos="fade-left">
