--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i class="bx bx-atom"></i></div>
               <h4 class="title"><a href="">NYC Treats</a></h4>
-              <p class="description">2014 - Present | Founder & CEO of Food Business with 145,000+ Follower Base</p>
+              <p class="description">2014 - Present | Founder of Food Business with 145,000+ Follower Base</p>
             </div>
 
           </div>
@@ -209,6 +209,7 @@
               </div>
             </div>
           </div>
+          <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
                 <!--<i class="ri-anchor-line" style="color: #b2904f;"></i>-->
@@ -223,6 +224,7 @@
                 <h3>HTML/CSS</h3>
               </div>
             </div>
+          </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
             <p>
