--- a/index.html
+++ b/index.html
@@ -175,8 +175,6 @@
               <h2>Features</h2>
               <p>Skills & Expertise</p>
             </div>
-            <!--<h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>-->
             <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
@@ -227,11 +225,10 @@
           </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
+            <div class="section-title" data-aos="fade-up">
+              <h2>Features</h2>
+              <p>Education</p>
+            </div>
             <ul>
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
               <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
