--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
-                <h3>&nbsp;&nbsp;Python</h3>
+                <h3>Python</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -223,15 +223,13 @@
               <h2>Features</h2>
               <p>Education</p>
             </div>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
-            </ul>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <div class="col-lg-3 col-md-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
+                <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
+                <span class="iconify" data-icon="logos:python" data-inline="false"></span>
+                <h3>Binghamton University</h3>
+              </div>
+            </div>
           </div>
         </div>
       </div>
