--- a/index.html
+++ b/index.html
@@ -166,11 +166,14 @@
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
-              <h2>Features</h2>
+              <!--<h2>Features</h2>-->
               <p>Skills & Expertise</p>
             </div>
             <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4">
+              <div class="section-title" data-aos="fade-up">
+                <h2>Programming</h2>
+              </div>
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
