--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="col-lg-3 col-md-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
-                <span class="iconify" data-icon="logos:python" data-inline="false"></span>&nbsp;&nbsp;
+                <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Python</h3>
               </div>
             </div>
