--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
                 <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
                 <span class="iconify" data-icon="logos:java" data-inline="false"></span>
-                <h3>Java</h3>
+                &nbsp;&nbsp;<h3>Java</h3>
               </div>
             </div>
           </div>
@@ -193,14 +193,14 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
                 <!--<i class="ri-database-2-line" style="color: #47aeff;"></i>-->
                 <span class="iconify" data-icon="logos:c-plusplus" data-inline="false"></span>
-                <h3>C++</h3>
+                &nbsp;&nbsp;<h3>C++</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
                 <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
                 <span class="iconify" data-icon="logos:c" data-inline="false"></span>
-                <h3>C</h3>
+                &nbsp;&nbsp;<h3>C</h3>
               </div>
             </div>
           </div>
@@ -209,14 +209,14 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
                 <!--<i class="ri-anchor-line" style="color: #b2904f;"></i>-->
                 <span class="iconify" data-icon="logos:javascript" data-inline="false"></span>
-                <h3>JavaScript</h3>
+                &nbsp;&nbsp;<h3>JavaScript</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
                 <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
                 <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
-                <h3>HTML/CSS</h3>
+                &nbsp;&nbsp;<h3>HTML/CSS</h3>
               </div>
             </div>
           </div>
@@ -229,7 +229,7 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
-                <h3>Binghamton University</h3>
+                &nbsp;&nbsp;<h3>Binghamton University</h3>
               </div>
             </div>
           </div>
