--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Binghamton University</h3>
+                <h3>Undergraduate</h3>
               </div>
             </div>
           </div>
