--- a/index.html
+++ b/index.html
@@ -203,6 +203,13 @@
                 &nbsp;&nbsp;<h3>C</h3>
               </div>
             </div>
+            <div class="col-lg-3 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
+                <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
+                <span class="iconify" data-icon="logos:c" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>C</h3>
+              </div>
+            </div>
           </div>
           <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
