--- a/index.html
+++ b/index.html
@@ -187,6 +187,13 @@
                 &nbsp;&nbsp;<h3>Java</h3>
               </div>
             </div>
+            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
+                <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
+                <span class="iconify" data-icon="logos:java" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>Perl</h3>
+              </div>
+            </div>
           </div>
           <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
@@ -207,7 +214,7 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
                 <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
                 <span class="iconify" data-icon="logos:c" data-inline="false"></span>
-                &nbsp;&nbsp;<h3>C</h3>
+                &nbsp;&nbsp;<h3>C#</h3>
               </div>
             </div>
           </div>
