--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
                 <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
-                <span class="iconify" data-icon="logos:c" data-inline="false"></span>
+                <span class="iconify" data-icon="logos:c-sharp" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>C#</h3>
               </div>
             </div>
