--- a/index.html
+++ b/index.html
@@ -230,7 +230,12 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
                 <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
                 <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
-                &nbsp;&nbsp;<h3>HTML/CSS</h3>
+                &nbsp;&nbsp;<h3>HTML</h3>
+              </div>
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
+                <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
+                <span class="iconify" data-icon="logos:css-3" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>CSS</h3>
               </div>
             </div>
           </div>
