--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
                 <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
-                <span class="iconify" data-icon="logos:java" data-inline="false"></span>
+                <span class="iconify" data-icon="vscode-icons:file-type-perl" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>Perl</h3>
               </div>
             </div>
