--- a/index.html
+++ b/index.html
@@ -232,10 +232,13 @@
                 <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>HTML</h3>
               </div>
+            </div>
+            <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
                 <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
                 <span class="iconify" data-icon="logos:css-3" data-inline="false"></span>
                 &nbsp;&nbsp;<h3>CSS</h3>
+              </div>
               </div>
             </div>
           </div>
