--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
             <div class="section-title" data-aos="fade-up">
               <p>Education</p>
             </div>
+            <div class="row" data-aos="fade-left">
+              <div class="section-title" data-aos="fade-up">
+                <h2>Undergraduate</h2>
+              </div>
             <div class="col-lg-3 col-md-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
