--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
               </div>
               </div>
             </div>
+            <div class="row" data-aos="fade-left">
+              <div class="section-title" data-aos="fade-up">
+                <h2>Programming</h2>
+              </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
             <div class="section-title" data-aos="fade-up">
