--- a/index.html
+++ b/index.html
@@ -253,8 +253,7 @@
             <div class="col-lg-3 col-md-4">
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
-                <span class="iconify" data-icon="logos:python" data-inline="false"></span>
-                &nbsp;&nbsp;<h3>Binghamton University</h3>
+                <h3>Binghamton University</h3>
               </div>
             </div>
           </div>
