--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
               </div>
             </div>
           </div>
+          <div class="row" data-aos="fade-left">
+            <p>Hello</p>
+          </div>
         </div>
       </div>
     </section><!-- End Features Section -->
