--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
               <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                 <!--<i class="ri-store-line" style="color: #ffbb2c;"></i>-->
                 <h3>Binghamton University</h3>
+                <p>Bachelor of Science in Computer Science</p>
               </div>
             </div>
           </div>
