--- a/index.html
+++ b/index.html
@@ -187,6 +187,13 @@
                 &nbsp;&nbsp;<h3>Java</h3>
               </div>
             </div>
+            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
+                <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
+                <span class="iconify" data-icon="vscode-icons:file-type-perl" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>Perl</h3>
+              </div>
+            </div>
           </div>
           <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
@@ -203,6 +210,13 @@
                 &nbsp;&nbsp;<h3>C</h3>
               </div>
             </div>
+            <div class="col-lg-3 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
+                <!--<i class="ri-gradienter-line" style="color: #ffa76e;"></i>-->
+                <span class="iconify" data-icon="logos:c-sharp" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>C#</h3>
+              </div>
+            </div>
           </div>
           <div class="row" data-aos="fade-left">
             <div class="col-lg-3 col-md-4 mt-4">
@@ -212,13 +226,20 @@
                 &nbsp;&nbsp;<h3>JavaScript</h3>
               </div>
             </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-              <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-                <!--<i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>-->
-                <span class="iconify" data-icon="vscode-icons:file-type-perl" data-inline="false"></span>
-                &nbsp;&nbsp;<h3>Perl</h3>
+            <div class="col-lg-3 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
+                <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
+                <span class="iconify" data-icon="logos:html-5" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>HTML</h3>
               </div>
             </div>
+            <div class="col-lg-3 col-md-4 mt-4">
+              <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
+                <!--<i class="ri-disc-line" style="color: #b20969;"></i>-->
+                <span class="iconify" data-icon="logos:css-3" data-inline="false"></span>
+                &nbsp;&nbsp;<h3>CSS</h3>
+              </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
