--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <!--<p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>-->
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon"><i class="bx-bx-fingerprint"></i></div>
+              <div class="icon"><i class="bx bx-fingerprint"></i></div>
               <h4 class="title"><a href="">Lockheed Martin</a></h4>
               <p class="description">2020 - Present | Software Engineer Associate</p>
             </div>
