--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
             <div class="col-lg-3 col-md-4">
                 <h3>Binghamton University</h3>
                 <p>Bachelor of Science in Computer Science</p>
+                <p>Class of 2020</p>
             </div>
           </div>
         </div>
