--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
       <div class="container">
-        <div class="row content">
+        <!--<div class="row content">-->
           <div class="col" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
               <!--<h2>Features</h2>-->
@@ -220,7 +220,7 @@
               </div>
             </div>
             </div>
-          </div>
+          <!--</div>-->
           <div class="col" data-aos="fade-left" data-aos-delay="200">
             <div class="section-title" data-aos="fade-up">
               <p>Education</p>
