--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="col" data-aos="fade-right" data-aos-delay="100">
             <div class="section-title" data-aos="fade-up">
               <!--<h2>Features</h2>-->
-              <p>Skills & Expertise</p>
+              <p>Skills</p>
             </div>
             <div class="row" data-aos="fade-left">
               <div class="section-title" data-aos="fade-up">
