--- a/index.html
+++ b/index.html
@@ -233,12 +233,14 @@
                 <p>Bachelor of Science in Computer Science</p>
                 <p>Class of 2020</p>
           </div>
+          <div class="col" data-aos="fade-left" data-aos-delay="200">
             <div class="section-title" data-aos="fade-up">
-              <h2>Undergraduate</h2>
+              <h2>Graduate</h2>
             </div>
-              <h3>Binghamton University</h3>
-              <p>Bachelor of Science in Computer Science</p>
-              <p>Class of 2020</p>
+              <h3>TBD</h3>
+              <p>Master's</p>
+              <p></p>
+            </div>
         </div>
       </div>
     </section><!-- End Features Section -->
