--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
               <h3>Emily Lakic</h3>
-              <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
+            <!--  <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
@@ -888,7 +888,7 @@
 
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="container">
       <div class="copyright">
